# Laika-Software

./: .gitignore  Dockerfile  README.md  docker-dev.yml  setup_dev.sh
MPC_fun/: debug_jump.py  jit_tmpmbX3as.c  jit_tmpsxTrm9.c  jumping_leg.py  working_MPC.py
laika_ws/src/laika_bringup/: CMakeLists.txt  package.xml
laika_ws/src/laika_bringup/launch/: leg.launch.py  simulation.launch.py
laika_ws/src/laika_cartesian_impedance_controller/: CMakeLists.txt  laika_cartesian_impedance_controller.xml  package.xml
laika_ws/src/laika_cartesian_impedance_controller/config/: real_leg_impedance_controller_config.yaml  sim_leg_impedance_controller_config.yaml
laika_ws/src/laika_cartesian_impedance_controller/controller/: laika_cartesian_impedance_controller.cpp  laika_cartesian_impedance_controller_parameters.yaml
laika_ws/src/laika_cartesian_impedance_controller/controller/include/laika_cartesian_impedance_controller/: laika_cartesian_impedance_controller.hpp
laika_ws/src/laika_control/: package.xml  setup.cfg  setup.py
laika_ws/src/laika_control/laika_control/: cartesian_mpc_jump.py  cartesian_pos_publisher.py  cartesian_simple_jump.py  joint_controller.py  joint_ik_publisher.py  joint_sin_publisher.py  joint_value_publisher.py  set_joints_extended.py  set_joints_ik.py  set_joints_random.py  set_joints_sin.py  set_knee_random.py  sin_walk.py
laika_ws/src/laika_description/: CMakeLists.txt  package.xml
laika_ws/src/laika_description/launch/: view_robot.launch.py
laika_ws/src/laika_description/meshes/: fl_hip_link.stl  hip.stl  lower_leg.stl  upper_leg.stl
laika_ws/src/laika_description/xacro/: const.xacro  left_leg.xacro  leg.xacro  leg_current.xacro  leg_gazebo.xacro  leg_ros2_control.xacro  materials.xacro  robot.xacro
laika_ws/src/laika_hardware/: CMakeLists.txt  package.xml
laika_ws/src/laika_hardware_interface/: CMakeLists.txt  laika_hardware_interface.xml  package.xml
laika_ws/src/laika_hardware_interface/config/: real_leg_hardware_interface_config.xacro  sim_leg_hardware_interface_config.xacro
laika_ws/src/laika_hardware_interface/hardware/: laika_hardware_interface.cpp
laika_ws/src/laika_hardware_interface/hardware/include/laika_hardware_interface/: laika_hardware_interface.hpp
laika_ws/src/laika_hardware_interface/odrive_base/src/: socket_can.cpp
laika_ws/src/laika_pid_controller/: CMakeLists.txt  laika_pid_controller.xml  package.xml
laika_ws/src/laika_pid_controller/config/: leg_pid_controllers.yaml  real_leg_pid_controller_config.yaml  sim_leg_pid_controller_config.yaml
laika_ws/src/laika_pid_controller/controller/: laika_pid_controller.cpp  laika_pid_controller_parameters.yaml
laika_ws/src/laika_pid_controller/controller/include/laika_pid_controller/: laika_pid_controller.hpp
laika_ws/src/laika_pid_controller/launch/: robot.launch.py
laika_ws/src/laika_pid_controller/testing/: laika_pid_controller_sin_publisher.cpp  laika_pid_controller_value_publisher.cpp
laika_ws/src/laika_sim/: CMakeLists.txt  package.xml
laika_ws/src/laika_sim/config/: laika_controller.yaml  test_stand_controller.yaml  world.sdf
laika_ws/src/laika_sim/launch/: simulation.launch.py
laika_ws/src/laika_sim/meshes/: bl_hip_link.STL  bl_lower_link.STL  bl_upper_link.STL  body_link.STL  br_hip_link.STL  br_lower_link.STL  br_upper_link.STL  fl_lower_link.STL  fl_upper_link.STL  fr_lower_link.STL  fr_upper_link.STL
laika_ws/src/laika_sim/urdf/: flying_laika.xacro.urdf  laika.xacro.urdf  sliding_laika.xacro.urdf  test.xacro.urdf  test_stand_laika.xacro.urdf  test_stand_laika_left.xacro.urdf  world.sdf
laika_ws/src/laika_simple_pid_controller/: CMakeLists.txt  laika_simple_pid_controller.xml  package.xml
laika_ws/src/laika_simple_pid_controller/config/: real_leg_pid_controller_config.yaml  sim_leg_pid_controller_config.yaml
laika_ws/src/laika_simple_pid_controller/controller/: laika_simple_pid_controller.cpp  laika_simple_pid_controller_parameters.yaml
laika_ws/src/laika_simple_pid_controller/controller/include/laika_simple_pid_controller/: laika_simple_pid_controller.hpp
laika_ws/src/odrive_control/: package.xml  setup.py
odrive/python/: README.md  const_speed.py  examples.py  heartbeat.py  motor.py  param_config.py
src/laika-control/: CMakeLists.txt  package.xml
src/laika-control/msg/: MotorStatus.msg  MotorTorqueCommand.msg
src/laika-interface/: CMakeLists.txt  package.xml
src/laika-io/: CMakeLists.txt  package.xml
src/laika-io-sim/: CMakeLists.txt  package.xml
src/laika-viz/: CMakeLists.txt  package.xml
src/laika_control/: package.xml  setup.py
src/laika_control/laika_control/: placeholder.py  position_controller.py
src/laika_control/msg/: ControlInput.msg  MotorPositionCommand.msg  MotorVelocityCommand.msg
src/laika_interface/: package.xml  setup.cfg  setup.py
src/laika_interface/laika_interface/: placeholder.py
src/laika_io/: package.xml  setup.cfg  setup.py
src/laika_io/laika_io/: placeholder.py
src/laika_io_sim/: package.xml  setup.cfg  setup.py
src/laika_io_sim/laika_io_sim/: placeholder.py
src/laika_io_sim/launch/: gz_launch.py  laika_gz_bridge.yaml
src/laika_viz/: package.xml  setup.cfg  setup.py
src/laika_viz/laika_viz/: placeholder.py
